# Agent-Arena

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SYNC.md  cli.py  codex.md  curate.py  mcp_server.py  pyproject.toml  railway.toml  requirements.txt  start.sh
.flox/: env.json
agents/: __init__.py  contracts.py  normalizer.py
api/: app.py
benchmark/: __init__.py  executor.py  jd_taskpacks.py  taskpacks.py
benchmarks/: fixtures.py  fixtures_holdout.py  fixtures_tune.py  jobs.md  wedge.md
certify/: checks.py  engine.py
coach/: analyzer.py  recommender.py  templates.py
docs/: ablation-plan.md  agent-platform-architecture.md  agent-runner-contract.md  agent-tournament-pipeline.md  agent-vs-agent-problem-statement.md  benchmark-integrity.md  claude-follow-up-current.md  hosted-sandbox-spec.md  human-review-console.md  implementation-backlog.md  jd-activation.md  jd-refresh-and-trend-spec.md  jd-role-test-matrix.md  jd-source-curation.md  lane-definition.md  next-lanes.md  project-steering.md  role-classification.md  shared-execution-plan.md  source-expansion-plan.md  sprint-plan.md  test-review-checklist.md  test-strategy.md  tournament-types.md
evaluate/: heuristic.py  llm_judge.py  rubric.py  safety.py  sandbox.py
frontend/: README.md  index.html  package-lock.json
ingest/: agency_agents.py  agent_roles.py  categorize.py  dedup.py  discovery.py  github.py  gitlab.py  leads.py  onet.py  orchestrator.py  registry.py  resolver.py  sources.py
learn/: feedback.py  insights.py
migrations/: 001_agent_native_tables.py
store/: db.py  (+1 more)
(+69 files in other folders)
